
A high level summary of noteworthy changes in each version.

NOTE:: Dependency version bumps are not listed here.

// git log --pretty="* %s" 0.3.0.2..HEAD

// only show TOC if this is the root document (not in the README)
ifndef::github_name[]
toc::[]
endif::[]

== 0.5.2.6

=== Fixes

* fix: RunLength offset decoding returns 0 base offset after no-progress commit - related to (#546)

== 0.5.2.5

=== Fixes

* fixes: #195 NoSuchFieldException when using consumer inherited from KafkaConsumer (#469)
* fix: After new performance fix PR#530 merges - corner case could cause out of order processing (#534)
* fix: Cleanup WorkManager's count of in-progress work, when work is stale after partition revocation (#547)

=== Improvements

* perf: Adds a caching layer to work management to alleviate O(n) counting (#530)

== 0.5.2.4

=== Improvements

* feature: Simple PCRetriableException to remove error spam from logs (#444)
* minor: fixes #486: Missing generics in JStreamParallelStreamProcessor #491
* minor: partially address #459: Moves isClosedOrFailed into top level ParallelConsumer interface (#491)
* tests: Demonstrates how to use MockConsumer with PC for issue #176
* other minor improvements

=== Fixes

* fixes #409: Adds support for compacted topics and commit offset resetting (#425)
** Truncate the offset state when bootstrap polled offset higher or lower than committed
** Prune missing records from the tracked incomplete offset state, when they're missing from polled batches
* fix: Improvements to encoding ranges (int vs long) #439
** Replace integer offset references with long - use Long everywhere we deal with offsets, and where we truncate down, do it exactly, detect and handle truncation issues.

== 0.5.2.3

=== Improvements

* Transactional commit mode system improvements and docs (#355)
** Clarifies transaction system with much better documentation.
** Fixes a potential race condition which could cause offset leaks between transactions boundaries.